# ai_ethics

./: _verify_assignment.py  pyproject.toml
.claude/: settings.local.json
workshop_docs/: AI_workshop_assignment.ipynb  Claude.md  EvaluateLLMs.ipynb  HW_workshop.ipynb  class_notebook.ipynb  order_sentences.csv  scored_nature_sentences.csv
workshop_docs/output/: generated_care_harm_confidence.parquet
