[project]
name = "ai-ethics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2026.3.0",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
